test/result.txt
cpost 1 2 3
cpost 1 2 3
pdjs version  (v8 version 8.5.210.20)
include
include x 1
include this.x 1
include y y
include this.y undefined
o.x 4
x 2
require bar
require foo 37
Hello, world!
jsarguments test.js,1234,test
error: error
verbose(4): ... you might be able to track this down from the Find menu.
inlets: 3 outlets: 2
error: Script file 'hjgjhgfjkh.js' not found.
 js hjgjhgfjkh.js
error: ... couldn't create
error: Error compiling 'C:/Source/pdjs/test/compile_error.js':
C:/Source/pdjs/test/compile_error.js:1: SyntaxError: Unexpected end of input
(
 
SyntaxError: Unexpected end of input

 js compile_error.js
error: ... couldn't create
error: Error running 'C:/Source/pdjs/test/run_error.js':
C:/Source/pdjs/test/run_error.js:1: ReferenceError: xyz is not defined
xyz();
^
ReferenceError: xyz is not defined
    at C:/Source/pdjs/test/run_error.js:1:1

 js run_error.js
error: ... couldn't create
error: Must specify source file.
 js
error: ... couldn't create
loadbang
prop proptest
0: 1337
error: Error calling 'exception':
C:/Source/pdjs/test/test.js:62: exception
    throw "exception";
    ^

list 3: 1 2 3
error: Function 'private' is private.
foo: 5 'toes'
Bang on inlet 1
0: symbol Hello\,\ world!
1: bang
0: 47.11
0: list x y z 1 2 3
1: list hallo ballo 12.34
mess: bang
mess: 3.14
mess: symbol test
mess: list test 1 2 3 4
anything: hallo
include
include x 1
include this.x 1
include y y
include this.y undefined
o.x 4
x 2
require bar
require foo 37
Hello, world!
jsarguments 
error: error
inlets: 3 outlets: 2
Bang on inlet 0
0: symbol Hello\,\ world!
1: bang
0: 47.11
0: list x y z 1 2 3
1: list hallo ballo 12.34
mess: bang
mess: 3.14
mess: symbol test
mess: list test 1 2 3 4
float: 1.5
other
inlets: 4 outlets: 3
inlets: 3 outlets: 2
